little change in name

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-title = "Seungkwon Choi"
+title = "Seungkwoaaaan Choi"
 baseURL = "https://chegevarar.github.io/Portfolio3/"
 languageCode = "en-us"
 theme = "ananke"
